# mag

./: .gitignore  all_git_objects.txt  main.py  pyproject.toml  requirements.txt
AnomalyDetection/output/: anomaly_detection_results.csv
AnomalyDetection/scripts/: README.md  __init__.py  anomaly_detection.py
AutoEncoder/logs/: events.out.tfevents.1768207378.DESKTOP-6FKT5DC.55480.0  events.out.tfevents.1768207422.DESKTOP-6FKT5DC.16232.0  events.out.tfevents.1768207469.DESKTOP-6FKT5DC.16492.0  events.out.tfevents.1768208805.DESKTOP-6FKT5DC.35360.0
AutoEncoder/output/reconstructions/: DSC00751_0001_latent.npy  DSC00751_0002_latent.npy  DSC00751_0003_latent.npy  DSC00751_0004_latent.npy  DSC00751_0005_latent.npy
AutoEncoder/scripts/: README.md  __init__.py  dataset.py  inference.py  model.py  train.py
DataAug/scripts/: ImageAug.py
